# serde_unstructured

./: Cargo.toml  README.md
.github/workflows/: docs.yml
serde_unstructured/: Cargo.toml  README.md
serde_unstructured/src/: lib.rs  projection.rs  view_path.rs
serde_unstructured/src/view_path/: storage.rs
serde_unstructured_derive/: Cargo.toml
serde_unstructured_derive/src/: lib.rs
test_suite/: Cargo.toml
test_suite/tests/: compile_test.rs  example_macro_output.rs  it_works.rs
test_suite/tests/compile_fail/: fail_enum.rs  fail_enum.stderr  invalid_serde_attr.rs  invalid_serde_attr.stderr  invalid_serde_attr_multiple.rs  invalid_serde_attr_multiple.stderr  override_crate_path.rs  override_crate_path.stderr  with_attr.rs  with_attr.stderr  with_attr_custom.rs  with_attr_custom.stderr
