[package]
name = "serde_unstructured"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_unstructured_derive = { path = "../serde_unstructured_derive" }
serde = { version = "1.0.117", default-features = false }
serde_json = { version = "1.0.59", optional = true }

[dev-dependencies]


[package.metadata.playground]
features = ["full"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
targets = ["x86_64-unknown-linux-gnu"]


[features]
default = ["full"]

docs = ["full"]
full = ["std", "json"]

# Implement Error trait.
std = ["alloc"]
# Enable features that require an allocator. (Mostly for better error messages.)
alloc = []

json = ["dep:serde_json", "alloc"]
