[package]
name = "serde_unstructured_derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]

[dependencies]
# Proc macro basics:
syn = {version = "2.0.0", features = ["extra-traits", "full"]}
quote = "1.0.7"
proc-macro2 = "1.0.20"

# Error handling:
proc-macro-error = "1.0.4"

# Mimic `$crate` inside a proc_macro:
proc-macro-crate = "3.2.0"

# Read serde attributes:
serde_derive_internals = "0.29.1"

# Handle case conversions:
# heck = "0.4.0"